--- a/src/style/framework/src/_menu.scss
+++ b/src/style/framework/src/_menu.scss
@@ -19,14 +19,14 @@
     margin-top: 0;
     color: $text-background-color;
     font-weight: normal;
-    padding: $unit-2 0.6rem;
+    padding: $unit-2 12px;
     cursor: pointer;
 
     & > a {
       display: block;
       color: inherit;
-      margin: (-$unit-2) -0.6rem;
-      padding: $unit-2 0.6rem;
+      margin: (-$unit-2) -12px;
+      padding: $unit-2 12px;
     }
 
     &:hover, &:focus, &:active, &.active {
@@ -34,7 +34,7 @@
     }
 
     &:not(:first-child) {
-      margin-top: .1rem;
+      margin-top: 2px;
     }
 
   }
